--- a/index.html
+++ b/index.html
@@ -19,10 +19,5 @@
     <script>
       $('body').bootstrapMaterialDesign();
     </script>
-<script type="text/javascript" src="lnk/inline.bundle.js"></script>
-<script type="text/javascript" src="lnk/polyfills.bundle.js"></script>
-<script type="text/javascript" src="lnk/styles.bundle.js"></script>
-<script type="text/javascript" src="lnk/vendor.bundle.js"></script>
-<script type="text/javascript" src="lnk/main.bundle.js"></script>
-</body>
+<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 </html>
